# innowise_laboratory

lecture_1/: pyproject.toml
lecture_2/: main.py
lecture_3/: main.py
lecture_4/: school.db  school.sql
lecture_5/book_api/: database.py  main.py
lecture_6/: Dockerfile  pyproject.toml
lecture_6/api/: requirements.txt
lecture_6/book_api/: books.db  main.py
